--- a/backend/src/test/resources/application-e2e.yml
+++ b/backend/src/test/resources/application-e2e.yml
@@ -18,3 +18,7 @@ spring:
       - classpath:db/migration
       - classpath:db/migration/mysql
     clean-disabled: false
+
+aws:
+  accessKeyId: test
+  secretAccessKey: test
