--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -71,3 +71,9 @@ spring:
   config:
     activate:
       on-profile: integration
+
+---
+spring:
+  config:
+    activate:
+      on-profile: integration-mysql
