--- a/.github/workflows/backend-rollback-main.yml
+++ b/.github/workflows/backend-rollback-main.yml
@@ -27,18 +27,11 @@ jobs:
         run: |
           set -euo pipefail
           INPUT='${{ github.event.inputs.version }}'
-
-          # v 접두사 정규화
-          if [[ "$INPUT" =~ ^v ]]; then
-            V="$INPUT"
-            P="${INPUT#v}"
-          else
-            P="$INPUT"
-            V="v$INPUT"
-          fi
+          
+          P="$INPUT"
+          V="v$INPUT"
 
           LOG="/var/log/yagubogu/deployments.log"
-
           # 1) 운영 로그에서 다이제스트 우선 검색 (최근 행 우선)
           DIGEST=""
           if sudo test -f "$LOG"; then
@@ -48,7 +41,7 @@ jobs:
                 for (i=1; i<=NF; i++) if ($i ~ /^digest=/) { sub(/^digest=/,"",$i); print $i; exit }
               }')"
           fi
-
+          
           # 2) 로그에 없으면 레지스트리 태그 조회 (vX.Y.Z 우선, 실패 시 X.Y.Z도 시도)
           if [ -z "${DIGEST:-}" ]; then
             for TAG in "$V" "$P"; do
@@ -59,8 +52,9 @@ jobs:
               fi
             done
           fi
-
+          
           [ -n "${DIGEST:-}" ] || { echo "해당 버전의 다이제스트를 찾을 수 없음: $INPUT" >&2; exit 1; }
+          
           echo "digest=$DIGEST" >> "$GITHUB_OUTPUT"
           echo "VER=$V" >> "$GITHUB_OUTPUT"
           echo "Resolved digest: $DIGEST (input=$INPUT)"
@@ -106,11 +100,22 @@ jobs:
             -l release.digest="$DIGEST" \
             "$IMAGE@$DIGEST"
 
+          # Health check (exit if failed)
+          sleep 10;
+          healthy=false
           for i in {1..30}; do
             if curl -fsS "http://127.0.0.1:$PORT/actuator/health" >/dev/null; then
-              echo "healthy"; break; fi
-            echo "waiting ($i/30)"; sleep 2
+              echo "NEW healthy"; healthy=true; break;
+            fi
+            echo "waiting health... ($i/30)"; sleep 2
           done
+          
+          if [ "$healthy" != true ]; then
+            echo "Health check failed after 30 attempts. Aborting deploy." >&2
+            docker logs "$INACTIVE" || true
+            docker rm -f "$INACTIVE" || true
+            exit 1
+          fi
 
           if [ "$COLOR" = "blue" ]; then
             TARGET="/etc/nginx/sites-available/yagubogu-blue.conf"
