--- a/crawling/src/main/resources/application.yml
+++ b/crawling/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: prod
+    active: local
 
   jpa:
     hibernate:
@@ -25,6 +25,36 @@ spring:
       maxLifetime: 1500000
       validationTimeout: 1000
       poolName: crawling-hikari-pool
+
+api:
+  kbo:
+    base-url: https://www.koreabaseball.com/ws
+    connect-timeout: 5s
+    read-timeout: 30s
+    content-type: application/x-www-form-urlencoded; charset=UTF-8
+
+kbo:
+  crawler:
+    base-url: https://www.koreabaseball.com/Schedule/ScoreBoard.aspx
+    navigation-timeout: 7s
+    table-timeout: 3s
+    wait-timeout: 3s
+    max-retries: 1
+    retry-delay: 500ms
+    context-pool-size: 2
+
+    # 셀렉터
+    date-field-selector: "#cphContents_cphContents_cphContents_hfSearchDate"
+    date-label-selector: "#cphContents_cphContents_cphContents_lblGameDate"
+    update-panel-selector: "#cphContents_cphContents_cphContents_udpRecord"
+    score-selector: ".smsScore"
+
+    # WebForms 포스트백 타겟
+    event-target: "ctl00$ctl00$ctl00$cphContents$cphContents$cphContents$btnCalendarSelect"
+
+    runner:
+      enabled: false
+      schedule-type: "regular"
 
 ---
 spring:
