--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -20,11 +20,17 @@ spring:
     enabled: true
 
 management:
-  endpoints.web.exposure.include: health, metrics, prometheus
   metrics:
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
     tags:
       app: yagubogu
       env: prod
+  endpoints:
+    web:
+      exposure:
+        include: prometheus,health,metrics
 
 springdoc:
   api-docs:
