--- a/crawling/src/test/resources/application.yml
+++ b/crawling/src/test/resources/application.yml
@@ -2,8 +2,57 @@ spring:
   flyway:
     enabled: false
 
----
-spring:
-  config:
-    activate:
-      on-profile: test
+  jpa:
+    hibernate:
+      ddl-auto: none
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+
+  datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL;DATABASE_TO_UPPER=false
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+    hikari:
+      maximumPoolSize: 5
+      minimumIdle: 1
+      connectionTimeout: 30000
+      maxLifetime: 1800000
+      poolName: crawling-hikari-test
+
+  sql:
+    init:
+      mode: never
+      data-locations: false
+
+api:
+  kbo:
+    base-url: https://www.koreabaseball.com/ws
+    connect-timeout: 5s
+    read-timeout: 30s
+    content-type: application/x-www-form-urlencoded; charset=UTF-8
+
+kbo:
+  crawler:
+    base-url: https://www.koreabaseball.com/Schedule/ScoreBoard.aspx
+    navigation-timeout: 7s
+    table-timeout: 3s
+    wait-timeout: 3s
+    max-retries: 1
+    retry-delay: 500ms
+    context-pool-size: 2
+
+    # 셀렉터
+    date-field-selector: "#cphContents_cphContents_cphContents_hfSearchDate"
+    date-label-selector: "#cphContents_cphContents_cphContents_lblGameDate"
+    update-panel-selector: "#cphContents_cphContents_cphContents_udpRecord"
+    score-selector: ".smsScore"
+
+    # WebForms 포스트백 타겟
+    event-target: "ctl00$ctl00$ctl00$cphContents$cphContents$cphContents$btnCalendarSelect"
+
+    runner:
+      enabled: false
+      schedule-type: "regular"
