--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         android:theme="@style/Theme.YaguBogu"
         tools:targetApi="31">
         <activity
+            android:name=".ui.pastcheckin.PastCheckInActivity"
+            android:exported="false"
+            android:label="@string/past_check_in_title"
+            android:theme="@style/Theme.YaguBogu" />
+        <activity
             android:name=".ui.badge.BadgeActivity"
             android:exported="false" />
         <activity
@@ -52,7 +57,6 @@
             android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
             android:theme="@style/Theme.YaguBogu.OssLicenseTheme"
             tools:replace="android:theme" />
-
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:exported="false" />
